--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "classnames": "^2.2.6",
     "lodash": "^3.10.1",
     "react": "16.3.2",
+    "react-calendar": "^2.17.5",
+    "react-datepicker": "^2.0.0",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0"
