--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^2.0.0",
+    "style-loader": "^0.23.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -26,8 +28,10 @@
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-calendar": "^2.17.5",
+    "react-data-calendar": "^0.1.0",
     "react-datepicker": "^2.0.0",
     "react-dom": "16.3.2",
+    "react-events-calendar": "^1.0.0-beta.3",
     "react-redux": "5.0.7",
     "redux": "4.0.0"
   }
